--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
             <p>Data Scientist & Aspiring Machine Learning Engineer</p>
-            <p class="location">Chicago | Boston</p>
+            <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -26,27 +26,29 @@
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project-card">
+        <div class="project-card simplified">
             <h3><a href="https://github.com/novoaj/GreenSpaceExplorer">Green Space Explorer (Backend/ML)</a></h3>
-            <p>With a classmate, developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map. I worked primarily on the website's backend and machine learning features.</p>
-            <p><strong>Technologies:</strong> Python, React, HTML, CSS, Javascript, Google Maps API</p>
+            <p>A web application to discover parks and green spaces, focusing on backend and machine learning features.</p>
+            <p class="tags"><span class="tag">Python</span> <span class="tag">React</span> <span class="tag">Machine Learning</span></p>
+            <a href="https://demo-link.com" class="project-link">View Demo</a> | <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link">View on GitHub</a>
         </div>
-        <div class="project-card">
+        <div class="project-card simplified">
             <h3><a href="https://github.com/bencoleman24/Music-Recommendation-Website/tree/main">Music Recommendation Website</a></h3>
-            <p>A music recommendation website that allows users to select a recommendation model, receive song suggestions based on their choice, and provide feedback on the recommendations.</p>
-            <p><strong>Technologies:</strong> Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotify API), HTML, CSS, JavaScript</p>
+            <p>A web-based music recommendation system allowing users to select models and receive song suggestions.</p>
+            <p class="tags"><span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">TensorFlow</span></p>
+            <a href="https://demo-link.com" class="project-link">View Demo</a> | <a href="https://github.com/bencoleman24/Music-Recommendation-Website/tree/main" class="project-link">View on GitHub</a>
         </div>
-        <div class="project-card">
+        <div class="project-card simplified">
             <h3><a href="https://github.com/bencoleman24/AmazonReviewInsights">Amazon Product Sentiment Report Generator</a></h3>
-            <p>Developed a tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</p>
-            <p><strong>Technologies:</strong> Python, Hugging Face Transformers, TextBlob, OpenAI API, Matplotlib, Seaborn, ReportLab</p>
+            <p>Developed a tool for analyzing Amazon product reviews with sentiment analysis and data visualization.</p>
+            <p class="tags"><span class="tag">Python</span> <span class="tag">NLP</span> <span class="tag">Visualization</span></p>
+            <a href="https://demo-link.com" class="project-link">View Demo</a> | <a href="https://github.com/bencoleman24/AmazonReviewInsights" class="project-link">View on GitHub</a>
         </div>
     </section>
 
