--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
+            <p>Aspiring Data Scientist</p>
             <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
@@ -36,7 +36,7 @@
         
         <h2>Education</h2>
         <div class="education">
-            <p><strong>Boston University</strong> - M.S. in Data Science (Expected May 2025)</p>
+            <p><strong>Boston University</strong> - M.S. in Data Science (Expected Graduation May 2025 or December 2025)</p>
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
