--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Coleman Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    
+    <style>
+        .section-title {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta http-equiv="refresh" content="0; url=about.html">
 </head>
@@ -50,16 +56,16 @@
     </header>
 
     <section id="about">
-        <h3>About Me</h3>
+        <h2 class="section-title">About Me</h2>
         <p>I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
         
-        <h3>Education</h3>
+        <h2>Education</h2>
         <div class="education">
             <p><strong>Boston University</strong> - M.S. in Data Science (Expected May 2025)</p>
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
-        <h3>Experience</h3>
+        <h2>Experience</h2>
         <div class="experience">
             <h3>Graduate Research Assistant - Boston University</h3>
             <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
