--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Aspiring Data Scientist</p>
+            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
             <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
@@ -31,19 +31,19 @@
     </header>
 
     <section id="about">
-        <h3>About Me</h3>
-        <p>Hello! I have a passion and curiosity for using data to solve real-world problems and uncovering hidden insights. I’m currently a Data Science masters student at Boston University and a research assistant in the Math & Stats department. I spend most of my time learning, researching, exercising, and playing abstract strategy games. I’m actively seeking out roles in Data Science, Analytics, Data Engineering, and related roles.</p>
+        <h2 class="section-title">About Me</h2>
+        <p>I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
         
-        <h3>Education</h3>
+        <h2>Education</h2>
         <div class="education">
-            <p><strong>Boston University</strong> - M.S. in Data Science (Expected Graduation May 2025 or December 2025)</p>
+            <p><strong>Boston University</strong> - M.S. in Data Science (Expected May 2025)</p>
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
-        <h3>Experience</h3>
+        <h2>Experience</h2>
         <div class="experience">
             <h3>Graduate Research Assistant - Boston University</h3>
-            <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification.</p>
+            <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
         </div>
         <div class="experience">
             <h3>Data Science Intern - SuperWorld</h3>
@@ -65,3 +65,35 @@
 </body>
 
 </html>
+
+<!-- projects.html -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects - Benjamin Coleman</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+
+<body>
+    <header class="detailed-header">
+        <div class="header-content">
+            <h1>Benjamin Coleman</h1>
+            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
+            <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
+            <div class="contact-links">
+                <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://github.com/bencoleman24"><i class="fab fa-github"></i> GitHub</a>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html" class="active">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
