--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
-        <h2>Experience</h2>
+        <h2>Recent Experience</h2>
         <div class="experience">
             <h3>Graduate Research Assistant - Boston University</h3>
             <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
