--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
-        <h2>Recent Experience</h2>
+        <h2>Experience</h2>
         <div class="experience">
             <h3>Graduate Research Assistant - Boston University</h3>
             <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
@@ -65,35 +65,3 @@
 </body>
 
 </html>
-
-<!-- projects.html -->
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Benjamin Coleman</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-
-<body>
-    <header class="detailed-header">
-        <div class="header-content">
-            <h1>Benjamin Coleman</h1>
-            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
-            <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
-            <div class="contact-links">
-                <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-                <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com/bencoleman24"><i class="fab fa-github"></i> GitHub</a>
-            </div>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html" class="active">Projects</a></li>
-            </ul>
-        </nav>
-    </header>
