--- a/about.html
+++ b/about.html
@@ -6,28 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Benjamin Coleman</title>
-    
-    <style>
-        .section-title {
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-        .skills {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .skill-tag {
-            background: #f0f0f0;
-            padding: 10px 15px;
-            border-radius: 10px;
-            font-size: 1em;
-            color: #333;
-            display: inline-flex;
-            align-items: center;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -61,19 +40,22 @@
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
         </div>
         
-        
-        <h2 class="section-title">Skills</h2>
-        <div class="skills">
-            <span class="skill-tag">Python</span>
-            <span class="skill-tag">R</span>
-            <span class="skill-tag">SQL</span>
-            <span class="skill-tag">Machine Learning</span>
-            <span class="skill-tag">Data Analysis</span>
-            <span class="skill-tag">Data Engineering</span>
-            <span class="skill-tag">Statistics</span>
-            <span class="skill-tag">Spark</span>
-            <span class="skill-tag">Docker</span>
-            <span class="skill-tag">Bayesian Methods</span>
+        <h2>Experience</h2>
+        <div class="experience">
+            <h3>Graduate Research Assistant - Boston University</h3>
+            <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification. Using Bayesian methods to refine model predictions and uncertainty estimation. Assisting in early stage research for a scalable platform for real-time inference and modeling.</p>
+        </div>
+        <div class="experience">
+            <h3>Data Science Intern - SuperWorld</h3>
+            <p><strong>June 2024 - September 2024</strong><br>Worked on various data analysis projects to identify key trends and potential strategies in improving platform engagement and growth. Enhanced data workflow by improving data cleanliness and optimizing transformation processes to support scalable models and analytics.</p>
+        </div>
+        <div class="experience">
+            <h3>Data Engineering Intern - CNH Industrial</h3>
+            <p><strong>May 2023 - August 2023</strong><br>Designed and implemented a data quality monitoring system using scheduled Databricks notebooks, enhancing data quality and accuracy. Employed statistical techniques to examine extensive vehicle data, successfully identifying and diagnosing problems, contributing to improved insights. Leveraged PowerBI for visualization and presented findings effectively.</p>
+        </div>
+        <div class="experience">
+            <h3>Student Assistant - University of Wisconsin-Madison, Dean of Students Office</h3>
+            <p><strong>January 2022 - May 2024</strong><br>Served as the first line of communication for the office, helping students, parents, and staff of the university. Assisted professional staff with projects and scheduling, and provided resources to students and parents in times of crisis.</p>
         </div>
     </section>
 
