--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
         </div>
     </section>
 
+    <h2 class="section-title">Skills</h2>
+        <div class="skills">
+            <span class="skill-tag">Python</span>
+            <span class="skill-tag">R</span>
+            <span class="skill-tag">SQL</span>
+            <span class="skill-tag">Machine Learning</span>
+            <span class="skill-tag">Data Analysis</span>
+            <span class="skill-tag">Data Engineering</span>
+            <span class="skill-tag">Statistics</span>
+            <span class="skill-tag">Research</span>
+        </div>
+    </section>
+
+
     <footer>
         <p>&copy; 2024 Benjamin Coleman</p>
     </footer>
