--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <h2 class="section-title">Skills</h2>
+    <h2>Skills</h2>
         <div class="skills">
             <span class="skill-tag">Python</span>
             <span class="skill-tag">R</span>
