--- a/about.html
+++ b/about.html
@@ -66,9 +66,7 @@
             <span class="skill-tag"><i class="fas fa-chart-bar"></i> Data Analysis</span>
             <span class="skill-tag"><i class="fas fa-cogs"></i> Data Engineering</span>
             <span class="skill-tag"><i class="fas fa-sigma"></i> Statistics</span>
-            <span class="skill-tag"><i class="fas fa-rocket"></i> Spark</span>
-            <span class="skill-tag"><i class="fab fa-docker"></i> Docker</span>
-            <span class="skill-tag"><i class="fas fa-calculator"></i> Bayesian Methods</span>
+            <span class="skill-tag"><i class="fas fa-chart-line"></i> Research</span>
         </div>
     </section>
 
