--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <span class="skill-tag"><i class="fas fa-database"></i> SQL</span>
             <span class="skill-tag"><i class="fas fa-chart-bar"></i> Data Analysis</span>
             <span class="skill-tag"><i class="fas fa-cogs"></i> Data Engineering</span>
-            <span class="skill-tag"><i class="fas fa-sigma"></i> Statistics</span>
+            <span class="skill-tag"><i class="fas fa-chart-pie"></i> Statistics</span>
             <span class="skill-tag"><i class="fas fa-chart-line"></i> Research</span>
         </div>
     </section>
