--- a/about.html
+++ b/about.html
@@ -60,9 +60,10 @@
 
         <h2 class="section-title">Skills</h2>
         <div class="skills">
-            <span class="skill-tag"><i class="fas fa-brain"></i> Machine Learning</span>
             <span class="skill-tag"><i class="fab fa-python"></i> Python</span>
+            <span class="skill-tag"><i class="fas fa-code"></i> R</span>
             <span class="skill-tag"><i class="fas fa-database"></i> SQL</span>
+            <span class="skill-tag"><i class="fas fa-brain"></i> Machine Learning</span>
             <span class="skill-tag"><i class="fas fa-chart-bar"></i> Data Analysis</span>
             <span class="skill-tag"><i class="fas fa-cogs"></i> Data Engineering</span>
             <span class="skill-tag"><i class="fas fa-chart-pie"></i> Statistics</span>
