--- a/about.html
+++ b/about.html
@@ -31,10 +31,9 @@
     </header>
 
     <section id="about">
-        <h2 class="section-title">About Me</h2>
-        <p>I am currently a master's student at Boston University, studying Data Science. I hold a Bachelor of Science in Data Science and Economics from the University of Wisconsin–Madison. I have a strong interest in using data to solve real-world problems, particularly in areas such as machine learning, data analysis, and data engineering. My experience includes research in stochastic gradient algorithms and Bayesian methods, as well as internships in data science and engineering.</p>
-        
-        <h2 class="section-title">Education</h2>
+        <h2>About Me</h2>
+            <p>Hello! I have a passion and curiosity for using data to solve real-world problems and uncovering hidden insights. I’m currently a Data Science masters student at Boston University and a research assistant in the Math & Stats department. I spend most of my time learning, researching, exercising, and playing abstract strategy games. I’m actively seeking out roles in Data Science, Analytics, Data Engineering, and related roles.</p>
+            <h2 class="section-title">Education</h2>
         <div class="education">
             <p><strong>Boston University</strong> - M.S. in Data Science (Expected May 2025)</p>
             <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
