--- a/projects.html
+++ b/projects.html
@@ -37,14 +37,23 @@
             <ul>
                 <li>Developed a web-based application offering personalized music recommendations, allowing users to choose from different recommendation models like popularity-based, cosine similarity, k-means, and neural networks.</li>
                 <li>Implemented dynamic model selection and a feedback mechanism, enabling users to influence future recommendations.</li>
-                <li>Designed a user-friendly interface with HTML, CSS, and JavaScript, and built a robust backend using Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotipy).</li>
+                <li>Designed a user-friendly interface with HTML, CSS, and JavaScript, and built the backend using Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotipy).</li>
             </ul>
             <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
+            <h3>Green Space Explorer (Backend and ML)</h3>
+            <ul>
+                <li>Developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</li>
+                <li>This application will have the framework of a social media platform with users, posts, and connection.</li>
+                <li>Tools and Technologies include Python, React, HTML, CSS, Javascript, Google Maps API.</li>
+            </ul>
+            <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link"><i class="fab fa-github"></i> Link</a>
+        </div>
+        <div class="project">
             <h3>Amazon Product Sentiment Report Generator</h3>
             <ul>
-                <li>Developed a tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</li>
+                <li>Developed a prototype tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</li>
                 <li>Employed Python with libraries like Hugging Face Transformers, TextBlob, and OpenAI API for accurate sentiment analysis and report generation.</li>
                 <li>Created detailed, user-friendly reports in PDF format, integrating visual data representations using Matplotlib, Seaborn, and ReportLab.</li>
             </ul>
@@ -67,15 +76,6 @@
                 <li>Project for Econometrics for Big Data course, presented findings to peers.</li>
             </ul>
             <a href="https://github.com/bencoleman24/Climate-Change-Statistical-Analysis" class="project-link"><i class="fab fa-github"></i> Link</a>
-        </div>
-        <div class="project">
-            <h3>Green Space Explorer (In Progress)</h3>
-            <ul>
-                <li>Developing a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</li>
-                <li>This application will have the framework of a social media platform with users, posts, and connection.</li>
-                <li>Tools and Technologies include Python, React, HTML, CSS, Javascript, Google Maps API.</li>
-            </ul>
-            <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
     </section>
 
