--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
     <section id="projects">
         <h2 class="section-title">Projects</h2>
         <div class="project">
-            <h3>Music Recommendation Website</h3>
+            <h3><a href="music_recommendation.html">Music Recommendation Website</a></h3>
             <ul>
                 <li>Developed a web-based application offering personalized music recommendations, allowing users to choose from different recommendation models like popularity-based, cosine similarity, k-means, and neural networks.</li>
                 <li>Implemented dynamic model selection and a feedback mechanism, enabling users to influence future recommendations.</li>
@@ -42,7 +42,7 @@
             <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3>Green Space Explorer (Backend and ML)</h3>
+            <h3><a href="green_space_explorer.html">Green Space Explorer (Backend and ML)</a></h3>
             <ul>
                 <li>Developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</li>
                 <li>This application will have the framework of a social media platform with users, posts, and connection.</li>
@@ -51,7 +51,7 @@
             <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3>Amazon Product Sentiment Report Generator</h3>
+            <h3><a href="amazon_sentiment.html">Amazon Product Sentiment Report Generator</a></h3>
             <ul>
                 <li>Developed a prototype tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</li>
                 <li>Employed Python with libraries like Hugging Face Transformers, TextBlob, and OpenAI API for accurate sentiment analysis and report generation.</li>
@@ -60,7 +60,7 @@
             <a href="https://github.com/bencoleman24/AmazonReviewInsights" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3>2023 NBA All-Star Projections</h3>
+            <h3><a href="nba_allstar_projections.html">2023 NBA All-Star Projections</a></h3>
             <ul>
                 <li>Conducted a detailed analysis using historical NBA data to predict the 24 players to be selected for the 2023 NBA All-Star team.</li>
                 <li>Utilized Python for statistical modeling, including regression, classification, hyperparameter tuning, and model evaluation, to analyze player performance and team success metrics.</li>
@@ -69,7 +69,7 @@
             <a href="https://github.com/bencoleman24/2023-NBA-All-Star-Projections" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3>Climate Change Statistical Analysis</h3>
+            <h3><a href="climate_analysis.html">Climate Change Statistical Analysis</a></h3>
             <ul>
                 <li>Analyzed temperature trends and emissions data over 50 years to explore climate change impacts.</li>
                 <li>Utilized Seasonal ARIMA forecasts, Multiple Linear Regression, Random Forests, and Lasso Regression for data analysis.</li>
