--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Data Scientist & Aspiring Machine Learning Engineer</p>
+            <p>Aspiring Data Scientist</p>
             <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
