--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
+        <h2 class="section-title">About Me</h2>
             <p>Hello! I have a passion and curiosity for using data to solve real-world problems and uncovering hidden insights. I’m currently a Data Science masters student at Boston University and a research assistant in the Math & Stats department. I spend most of my time learning, researching, exercising, and playing abstract strategy games. I’m actively seeking out roles in Data Science, Analytics, Data Engineering, and related roles.</p>
             <h2 class="section-title">Education</h2>
         <div class="education">
