--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Benjamin Coleman</title>
-    <link rel="stylesheet" href="styles.css">
+    
+    <style>
+        a.project-title-link {
+            color: #333;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        a.project-title-link:hover {
+            color: #007bff;
+            text-decoration: underline;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -33,7 +44,7 @@
     <section id="projects">
         <h2 class="section-title">Projects</h2>
         <div class="project">
-            <h3><a href="music_recommendation.html">Music Recommendation Website</a></h3>
+            <h3><a href="" class="project-title-link"></a></h3>
             <ul>
                 <li>Developed a web-based application offering personalized music recommendations, allowing users to choose from different recommendation models like popularity-based, cosine similarity, k-means, and neural networks.</li>
                 <li>Implemented dynamic model selection and a feedback mechanism, enabling users to influence future recommendations.</li>
