--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Benjamin Coleman</title>
-    <style>
-        a.project-title-link {
-            color: #333;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-        a.project-title-link:hover {
-            color: #007bff;
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -25,7 +15,7 @@
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
             <p>Aspiring Data Scientist</p>
-            <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Boston</p>
+            <p class="location">Chicago | Boston</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -43,7 +33,7 @@
     <section id="projects">
         <h2 class="section-title">Projects</h2>
         <div class="project">
-            <h3><a href="" class="project-title-link"></a></h3>
+            <h3><a href="music_recommendation.html" class="project-title-link">Music Recommendation Website</a></h3>
             <ul>
                 <li>Developed a web-based application offering personalized music recommendations, allowing users to choose from different recommendation models like popularity-based, cosine similarity, k-means, and neural networks.</li>
                 <li>Implemented dynamic model selection and a feedback mechanism, enabling users to influence future recommendations.</li>
@@ -52,7 +42,7 @@
             <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3><a href="green_space_explorer.html">Green Space Explorer (Backend and ML)</a></h3>
+            <h3><a href="green_space_explorer.html" class="project-title-link">Green Space Explorer (Backend and ML)</a></h3>
             <ul>
                 <li>Developed a prototype of a full-stack web application that allows users to discover parks and green spaces in their area through a generation of an interactive map.</li>
                 <li>This application will have the framework of a social media platform with users, posts, and connection.</li>
@@ -61,7 +51,7 @@
             <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3><a href="amazon_sentiment.html">Amazon Product Sentiment Report Generator</a></h3>
+            <h3><a href="amazon_sentiment.html" class="project-title-link">Amazon Product Sentiment Report Generator</a></h3>
             <ul>
                 <li>Developed a prototype tool for processing and analyzing Amazon product reviews, using advanced sentiment analysis and data visualization techniques.</li>
                 <li>Employed Python with libraries like Hugging Face Transformers, TextBlob, and OpenAI API for accurate sentiment analysis and report generation.</li>
@@ -70,7 +60,7 @@
             <a href="https://github.com/bencoleman24/AmazonReviewInsights" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3><a href="nba_allstar_projections.html">2023 NBA All-Star Projections</a></h3>
+            <h3><a href="nba_allstar_projections.html" class="project-title-link">2023 NBA All-Star Projections</a></h3>
             <ul>
                 <li>Conducted a detailed analysis using historical NBA data to predict the 24 players to be selected for the 2023 NBA All-Star team.</li>
                 <li>Utilized Python for statistical modeling, including regression, classification, hyperparameter tuning, and model evaluation, to analyze player performance and team success metrics.</li>
@@ -79,7 +69,7 @@
             <a href="https://github.com/bencoleman24/2023-NBA-All-Star-Projections" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
         <div class="project">
-            <h3><a href="climate_analysis.html">Climate Change Statistical Analysis</a></h3>
+            <h3><a href="climate_analysis.html" class="project-title-link">Climate Change Statistical Analysis</a></h3>
             <ul>
                 <li>Analyzed temperature trends and emissions data over 50 years to explore climate change impacts.</li>
                 <li>Utilized Seasonal ARIMA forecasts, Multiple Linear Regression, Random Forests, and Lasso Regression for data analysis.</li>
