--- a/music_recommendation.html
+++ b/music_recommendation.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <header class="detailed-header">
+        <div class="header-content">
+            <h1>Music Recommendation Website</h1>
+            <p>Explore personalized music recommendations using various recommendation models.</p>
+            <div class="contact-links">
+                <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> GitHub Repo</a>
+            </div>
+        </div>
+    </header>
+
     <nav>
         <ul>
             <li><a href="projects.html">&larr; Back to Projects</a></li>
