--- a/music_recommendation.html
+++ b/music_recommendation.html
@@ -1,3 +1,4 @@
+<!-- music_recommendation_website.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,50 +11,64 @@
 </head>
 
 <body>
-    <header class="detailed-header">
-        <div class="header-content">
-            <h1>Music Recommendation Website</h1>
-            <p>Explore personalized music recommendations using various recommendation models.</p>
-            <div class="contact-links">
-                <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> GitHub Repo</a>
+    <div class="container">
+        <header class="detailed-header">
+            <div class="header-content">
+                <h1>Music Recommendation Website</h1>
+                <p>Explore personalized music recommendations using various recommendation models.</p>
+                <div class="contact-links">
+                    <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> GitHub Repo</a>
+                </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="projects.html">&larr; Back to Projects</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="projects.html">&larr; Back to Projects</a></li>
+            </ul>
+        </nav>
 
-    <h2>Project Overview</h2>
-        <p>This project is a web-based application that serves personalized song recommendations to users. Users can select the recommendation model type (e.g., popularity-based, cosine similarity, k-means, neural networks) and input their genre preferences or a song that they want recommendations based on. The system then generates tailored suggestions with corresponding song links, providing a smooth and interactive experience.</p>
-    </section>
-    <h2>Features</h2>
-        <ul>
-            <li><strong>Model Selection:</strong> Choose from 4 recommendation models to tailor the experience.</li>
-            <li><strong>Feedback Mechanism:</strong> After viewing recommendations, users can provide feedback on the quality of recommendations, helping improve the system further.</li>
-            <li><strong>Spotify Song Links:</strong> Each song recommendation comes with a Spotify link, taking the user directly to the song.</li>
-        </ul>
-    </section>
-    <h2>Technical Stack</h2>
-        <p><strong>Frontend:</strong> HTML, CSS, and JavaScript (Frontend help was provided)</p>
-        <p><strong>Backend:</strong> Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotipy)</p>
-    </section>
-   <h2>Recommendation Limitations</h2>
-        <p>The training data for the recommendation models is relatively small (~350k rows) compared to what an extensive Spotify dataset with every song would look like. This limits the potential of the models because it makes it difficult to add quality assurance filters like a minimum view count. Occasionally, songs that are irrelevant or of low quality will be recommended.</p>
-        <p>Typically, music recommendation models rely on clustering algorithms that group listeners based on their preferences and suggest songs that similar listeners enjoy. However, I chose a different approach by using audio feature data to recommend songs. While this method might not be the most conventional or ideal, the results are still intriguing and entertaining.</p>
-    </section>
-    <h2>Demo Video</h2>
-        <p>Watch the demo video below to see the Music Recommendation Website in action:</p>
-        <a href="https://github.com/user-attachments/assets/27fc2fdf-7e58-4f26-b954-dc3480d35289">Demo Video Link</a>
-    </section>
-    <h2>Website Link</h2>
-        <p><a href="http://www.mlmusicrec.com">mlmusicrec.com</a> - Try the website yourself and get a recommendation!</p>
-    </section>
-    <footer>
-        <p>&copy; 2024 Benjamin Coleman</p>
-    </footer>
+        <section id="overview">
+            <h2 class="section-title">Project Overview</h2>
+            <p>This project is a web-based application that serves personalized song recommendations to users. Users can select the recommendation model type (e.g., popularity-based, cosine similarity, k-means, neural networks) and input their genre preferences or a song that they want recommendations based on. The system then generates tailored suggestions with corresponding song links, providing a smooth and interactive experience.</p>
+        </section>
+
+        <section id="features">
+            <h2 class="section-title">Features</h2>
+            <ul>
+                <li><strong>Model Selection:</strong> Choose from 4 recommendation models to tailor the experience.</li>
+                <li><strong>Feedback Mechanism:</strong> After viewing recommendations, users can provide feedback on the quality of recommendations, helping improve the system further.</li>
+                <li><strong>Spotify Song Links:</strong> Each song recommendation comes with a Spotify link, taking the user directly to the song.</li>
+            </ul>
+        </section>
+
+        <section id="tech-stack">
+            <h2 class="section-title">Technical Stack</h2>
+            <p><strong>Frontend:</strong> HTML, CSS, and JavaScript (Frontend help was provided)</p>
+            <p><strong>Backend:</strong> Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotipy)</p>
+        </section>
+
+        <section id="limitations">
+            <h2 class="section-title">Recommendation Limitations</h2>
+            <p>The training data for the recommendation models is relatively small (~350k rows) compared to what an extensive Spotify dataset with every song would look like. This limits the potential of the models because it makes it difficult to add quality assurance filters like a minimum view count. Occasionally, songs that are irrelevant or of low quality will be recommended.</p>
+            <p>Typically, music recommendation models rely on clustering algorithms that group listeners based on their preferences and suggest songs that similar listeners enjoy. However, I chose a different approach by using audio feature data to recommend songs. While this method might not be the most conventional or ideal, the results are still intriguing and entertaining.</p>
+        </section>
+
+        <section id="demo">
+            <h2 class="section-title">Demo Video</h2>
+            <p>Watch the demo video below to see the Music Recommendation Website in action:</p>
+            <a href="https://github.com/user-attachments/assets/27fc2fdf-7e58-4f26-b954-dc3480d35289">Demo Video Link</a>
+        </section>
+
+        <section id="website">
+            <h2 class="section-title">Website Link</h2>
+            <p><a href="http://www.mlmusicrec.com">mlmusicrec.com</a> - Try the website yourself and get a recommendation!</p>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 Benjamin Coleman</p>
+        </footer>
+    </div>
 </body>
 
 </html>
