--- a/green_space_explorer.html
+++ b/green_space_explorer.html
@@ -58,7 +58,7 @@
         </section>
 
         <section id="demo">
-            <h2 class="section-title">Links</h2>
+            <h2 class="section-title">Demo Video and Website Link</h2>
             <a href="https://github.com/user-attachments/assets/ea7d3462-098b-4252-a4b0-9351fd56c670">Demo Video Link</a>
             <p><a href="https://gse-web.azurewebsites.net/">Visit the Green Space Explorer Website</a></p>
         </section>
