--- a/amazon_sentiment.html
+++ b/amazon_sentiment.html
@@ -29,7 +29,7 @@
 
         <section id="overview">
             <h2 class="section-title">Project Overview</h2>
-            <p>This tool efficiently processes and analyzes customer reviews from Amazon products. It leverages state-of-the-art sentiment analysis and data processing techniques to parse through vast amounts of text, extracting the most pertinent information and compiling it into an easily digestible format.</p>
+            <p>This tool efficiently processes and analyzes customer reviews from Amazon products. It leverages state-of-the-art sentiment analysis and data processing techniques to parse through vast amounts of text, extracting the most pertinent information and compiling it into an easily digestible format. Amazon now has a tool similar to this where they provide a summary of what the reviews say on the product page. At the time I did the project I don't believe they did.</p>
             <p><strong>Note:</strong> This is a prototype and may not be consistently reproducible due to certain limitations and dependencies.</p>
         </section>
 
