--- a/nba_allstar_projections.html
+++ b/nba_allstar_projections.html
@@ -29,7 +29,7 @@
 
         <section id="overview">
             <h2 class="section-title">Project Overview</h2>
-            <p>This project involved analyzing historical NBA data to predict the 24 players to be selected for the 2023 NBA All-Star team. The analysis utilized various statistical modeling techniques, including regression, classification, and hyperparameter tuning, to determine the top players most likely to be chosen for the All-Star game. Won a small sum of money using these findings to bet.</p>
+            <p>This project involved analyzing historical NBA data to predict the 24 players to be selected for the 2023 NBA All-Star team. The analysis utilized various statistical modeling techniques, including regression, classification, and hyperparameter tuning, to determine the top players most likely to be chosen for the All-Star game. Using these findins, I won a small sum of money betting.</p>
         </section>
 
         <section id="features">
