--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-<!-- projects.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -76,6 +75,14 @@
                 <li>Project for Econometrics for Big Data course, presented findings to peers.</li>
             </ul>
             <a href="https://github.com/bencoleman24/Climate-Change-Statistical-Analysis" class="project-link"><i class="fab fa-github"></i> Link</a>
+        </div>
+        <div class="project">
+            <h3><a href="russia_ukraine_article.html" class="project-title-link">An Overview of the Russia-Ukraine War and Its Global Economic Consequences</a></h3>
+            <ul>
+                <li>Wrote an article on the Russia-Ukraine conflict and its global economic consequences, published in the Spring 2023 issue of Equilibrium - UW-Madison Undergraduate Journal of Economics.</li>
+                <li>Researched and analyzed the economic impacts of the conflict, with a focus on global financial systems, trade, and economic stability.</li>
+            </ul>
+            <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
         </div>
     </section>
 
