--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                 <li>Wrote an article on the Russia-Ukraine conflict and its global economic consequences, published in the Spring 2023 issue of Equilibrium - UW-Madison Undergraduate Journal of Economics.</li>
                 <li>Researched and analyzed the economic impacts of the conflict, with a focus on global financial systems, trade, and economic stability.</li>
             </ul>
-            <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
+            <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article (Page 45)</a>
         </div>
     </section>
 
