--- a/projects.html
+++ b/projects.html
@@ -84,16 +84,7 @@
             </ul>
             <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article (Page 45)</a>
         </div>
-                    <div class="project">
-            <h3><a href="big_data_systems.html" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
-            <ul>
-                <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison.</li>
-                <li>Worked with various big data technologies, including Docker, Hadoop, Spark, and Cassandra, all set up on a Google Cloud VM using Ubuntu 22.04 LTS.</li>
-                <li>Gained practical experience in managing distributed systems and processing large-scale data.</li>
-            </ul>
-            <a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-link"><i class="fab fa-github"></i> Link</a>
-        </div>
-        <div class="project">
+                <div class="project">
             <h3><a href="ai_projects.html" class="project-title-link">Introduction to Artificial Intelligence Projects</a></h3>
             <ul>
                 <li>Collection of projects from the Introduction to Artificial Intelligence course at UW-Madison (Spring 2024).</li>
@@ -101,6 +92,15 @@
                 <li>Worked on implementing AI algorithms and exploring their real-world applications.</li>
             </ul>
             <a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-link"><i class="fab fa-github"></i> Link</a>
+        </div>
+                    <div class="project">
+            <h3><a href="big_data_systems.html" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
+            <ul>
+                <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison (Spring 2023).</li>
+                <li>Worked with various big data technologies, including Docker, Hadoop, Spark, and Cassandra, all set up on a Google Cloud VM using Ubuntu 22.04 LTS.</li>
+                <li>Gained practical experience in managing distributed systems and processing large-scale data.</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
 
     </section>
