--- a/projects.html
+++ b/projects.html
@@ -88,8 +88,7 @@
             <h3><a href="ai_projects.html" class="project-title-link">Introduction to Artificial Intelligence Projects</a></h3>
             <ul>
                 <li>Collection of projects from the Introduction to Artificial Intelligence course at UW-Madison (Spring 2024).</li>
-                <li>Covered foundational AI topics, including reinforcement learning, clustering, and neural networks.</li>
-                <li>Worked on implementing AI algorithms and exploring their real-world applications.</li>
+                <li>Covered foundational AI topics, including reinforcement learning, clustering, neural networks, and more.</li>
             </ul>
             <a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
@@ -98,7 +97,6 @@
             <ul>
                 <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison (Spring 2023).</li>
                 <li>Worked with various big data technologies, including Docker, Hadoop, Spark, and Cassandra, all set up on a Google Cloud VM using Ubuntu 22.04 LTS.</li>
-                <li>Gained practical experience in managing distributed systems and processing large-scale data.</li>
             </ul>
             <a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-link"><i class="fab fa-github"></i> Link</a>
         </div>
